<resources>
    <string name="app_name">Tourmate</string>

    <string name="tour_mate">Tour Mate</string>
    <string name="are_you_sure_want_to_exit_tout_mate">Are you sure want to exit Tout Mate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot password ?</string>


    <string name="action_settings">Settings</string>
    <string name="new_transaction_header">New transaction</string>
    <string name="currency">BDT</string>
    <string name="confirm">Confirm</string>
    <string name="transaction_name_placeholder">Title</string>
    <string name="dialog_edit_budget_title">Edit budget</string>
    <string name="add">Add</string>
    <string name="edit">Done</string>
    <string name="theme">Theme</string>
    <string name="ok">Ok</string>
    <string name="choose_theme">Choose theme</string>
    <string name="budget">Budget:</string>
    <string name="transactions">Transactions</string>

    <string-array name="arr_transaction_options">
        <item>Expense</item>
        <item>Income</item>
    </string-array>

    <string-array name="arr_theme_options">
        <item>System default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="str_currency">Currency</string>
    <string name="fill_title">You have to fill title</string>
    <string name="fill_amount">You have to fill amount</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="type">Type</string>

    <string name="google_maps_API_key">AIzaSyCzeCigMhYFV9wx6kQuHmuuZhmm7aD487Y</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
</resources>