<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingHorizontal="2dp"
            android:background="@color/background"
            android:elevation="1dp"
            android:text="@string/transaction_name_placeholder"
            android:textColor="@color/textColorLight"/>
        <EditText
            android:id="@+id/edit_transaction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:background="@drawable/edittext"
            android:padding="12dp"
            android:importantForAutofill="no" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_weight="2"
            android:layout_width="1dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:paddingHorizontal="2dp"
                android:background="@color/background"
                android:elevation="1dp"
                android:text="@string/amount"
                android:textColor="@color/textColorLight"/>

            <TextView
                android:id="@+id/txt_transaction_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:paddingTop="2dp"
                android:text="@string/currency"
                android:textColor="@color/textColorLight" />

            <EditText
                android:id="@+id/edit_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@drawable/edittext"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingVertical="12dp"
                android:layout_marginEnd="6dp"
                android:paddingStart="30dp"
                android:layout_marginRight="6dp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:paddingHorizontal="2dp"
                android:background="@color/background"
                android:elevation="1dp"
                android:text="@string/type"
                android:textColor="@color/textColorLight"/>
            <Spinner
                android:id="@+id/spin_transaction_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:padding="12dp"
                android:layout_marginTop="9dp"
                android:layout_marginStart="6dp"
                android:entries="@array/arr_transaction_options"/>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColorLight"
        android:layout_marginVertical="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingHorizontal="2dp"
                android:background="@color/background"
                android:elevation="1dp"
                android:text="@string/date"
                android:textColor="@color/textColorLight"/>
            <EditText
                android:id="@+id/edit_transaction_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:editable="false"
                android:clickable="true"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/today"
                android:importantForAutofill="no"
                android:focusable="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:paddingHorizontal="2dp"
                android:background="@color/background"
                android:elevation="1dp"
                android:text="@string/time"
                android:textColor="@color/textColorLight"/>
            <EditText
                android:id="@+id/edit_transaction_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:editable="false"
                android:clickable="true"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:layout_marginStart="6dp"
                android:hint="@string/now"
                android:importantForAutofill="no"
                android:focusable="true" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_transaction_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/blue"
        android:textColor="@color/white"

        android:text="@string/confirm" />

</LinearLayout>