<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ofwhite">


    <TextView
        android:id="@+id/some"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/head"/>


    <LinearLayout
        android:background="@drawable/body"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/blue"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/button_white"
            android:text="@string/tour_mate"/>

        <TextView
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/are_you_sure_want_to_exit_tout_mate"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/yes_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="200dp"
                android:background="@drawable/button_blue"
                android:text="@string/yes"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="200dp" />
            <Button
                android:id="@+id/no_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_blue"
                android:text="@string/no"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="20dp" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>