<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorLight"
        android:text="@string/budget" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_budget_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/textColorMain"
                android:text="@string/currency" />

            <TextView
                android:id="@+id/txt_budget_integers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/textColorMain"
                android:text="0"
                android:textSize="42sp" />

            <TextView
                android:id="@+id/txt_budget_decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text=",00"
                android:textColor="@color/textColorMain"
                android:textSize="24sp" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_budget_edit"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:background="@color/blue"
            android:paddingTop="8dp"
            android:drawableTop="@drawable/ic_edit_24"
            android:textColor="@color/textColorAlt" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/transactions"
        android:textColor="@color/textColorMain"
        android:layout_marginBottom="6dp"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/list_transactions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="72dp"/>

</LinearLayout>
